changed to 2.5 flash and added delete data button

--- a/everything.ipynb
+++ b/everything.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "283e723b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ethan\\Desktop\\umd\\s4 spring 2025\\HDCC209B\\UMD-Sustainability-Chatbot\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langsmith import traceable, utils\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI, GoogleGenerativeAIEmbeddings\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "9eec7177",
    "metadata": {},
    "outputs": [
@@ -32,7 +41,7 @@
        "<module 'my_utils' from 'c:\\\\Users\\\\ethan\\\\Desktop\\\\umd\\\\s4 spring 2025\\\\HDCC209B\\\\UMD-Sustainability-Chatbot\\\\my_utils.py'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "ad2f134a",
    "metadata": {},
    "outputs": [
@@ -64,7 +73,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "a66914b7",
    "metadata": {},
    "outputs": [
@@ -517,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "eebff45a",
    "metadata": {},
    "outputs": [
@@ -527,12 +536,13 @@
        "{'dimension': 384,\n",
        " 'index_fullness': 0.0,\n",
        " 'metric': 'cosine',\n",
-       " 'namespaces': {'file_data': {'vector_count': 1590}},\n",
-       " 'total_vector_count': 1590,\n",
+       " 'namespaces': {'file_data': {'vector_count': 1590},\n",
+       "                'own_data': {'vector_count': 2}},\n",
+       " 'total_vector_count': 1592,\n",
        " 'vector_type': 'dense'}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "5b7d8779",
    "metadata": {},
    "outputs": [],
@@ -646,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "875b1a8a",
    "metadata": {},
    "outputs": [],
@@ -659,7 +669,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
+   "id": "7d9609d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_db.index.delete(['own_data_1'], namespace='own_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "056c1930",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FetchResponse(namespace='own_data', vectors={'own_data_0': Vector(id='own_data_0', values=[-0.0458585434, -0.0130797494, -0.00269041327, 0.0263503268, 0.00474185823, 0.0276646279, -0.0591854192, 0.00725139072, -0.0548413694, -0.0541994199, -0.0456622243, 0.0325723812, 0.0184200816, 0.00550129125, -0.0646630228, -0.0807948932, -0.0691601, 0.0392280743, 0.0301762037, -0.0140081309, 0.0420468301, -0.00557948509, -0.0549777299, -0.0220120344, 0.00502859708, 0.0374645256, -0.0760904327, 0.0330352224, 0.0163584054, 0.0245779436, -0.0579745099, 0.0352621749, 0.0915637463, -0.118237056, 0.060236, 0.0660546571, 0.020591991, 0.0096854642, -0.00692258, 0.0519558154, 0.0114249783, -0.0768825784, 0.00756506249, 0.127229154, -0.0109763751, 0.0473845899, -0.0579140484, -0.0459274128, -0.0147999637, 0.0512433574, -0.00297062239, -0.0547073521, -0.0396010801, 0.082407631, -0.0190310683, -0.0936329663, -0.0327521078, -0.0637850165, -0.0172274932, 0.0314972289, 0.0465377457, -0.00642039767, -0.100367449, 0.0352068581, 0.00688984431, 0.00626885612, -0.0992168114, 0.0885533, 0.0376272239, -0.0949718952, 0.01404214, 0.040407382, 0.0230149329, -0.00522924727, -0.00993317738, 0.00389084802, 0.0567537099, 0.0117346738, -0.0447786748, 0.0387365706, -0.0185302477, -0.0880475119, 0.0330181234, 0.0473948978, 0.00308862422, 0.0219128858, 0.0055511035, -0.0928030685, 0.0340111479, -0.0396214277, 0.00355360541, 0.0328451507, 0.0366406702, -0.0133830076, -0.0497726575, 0.0631915629, -0.0543224812, -0.0187853985, -0.00900660176, -0.0115830395, 0.0278456602, 0.0165383369, -0.0167255439, -0.010676194, 0.0803543925, -0.0810724795, -0.00657856185, 0.17207928, 0.0537912808, -0.0308061801, -0.0408184715, -0.00396746444, 0.0190554187, 0.00815043412, -0.0372911468, 0.027382059, -0.0800182745, -0.080904372, 0.0715806, 0.0556328483, -0.0292779543, -0.0288840737, -0.0722129121, -0.0429420136, 0.00845922157, 0.00993378088, 0.00322840619, -2.2801896e-33, 0.00737476768, 0.0332775041, 0.0621874258, -0.0402045399, 0.08397194, -0.00718486262, -0.0555427596, -0.0147233624, 0.0168698579, -0.0123747019, -0.0364334881, 0.0635974556, -0.0685932636, 0.0100056557, -0.126480088, -0.173240945, -0.022730561, 0.039625477, -0.00191852276, -0.0448818021, -0.0528528504, -0.0357336737, -0.0569659956, -0.0115673877, 0.0438746, 0.0350127332, -0.0525541492, 0.0573697798, 0.0996927768, 0.0343286097, 0.0071015018, 0.00471706782, -0.0125054149, -0.00406081835, -0.0518509895, -0.0123973843, 0.0369102247, -0.0171353817, -0.0849927664, -0.040705923, 0.0510258116, 0.0263769235, 0.00136111747, 0.0861930698, 0.0329028666, -0.0611679219, 0.0299939569, -0.0364939868, 0.144974485, -0.0520978682, -0.000435391034, 0.0421493165, -0.0756536275, 0.0345228575, -0.0258083791, -0.014059389, -0.0435980968, 0.014267996, -0.0383637436, 0.022298187, 0.00692212349, 0.0748365, -0.0248366911, -0.0842096955, 0.0335511751, 0.0103257196, 0.0317222029, -0.0145673882, 0.0654411763, 0.0254039802, -0.029195644, -0.00930677447, 0.0780412704, 0.0574690402, -0.0370279923, 0.00902950484, -0.0112594115, 0.0263349693, -0.077894628, 0.010550959, -0.00396697782, -0.0262047686, -0.000129482025, 0.0945006832, 0.104398482, -0.1026012, 0.0583259799, -0.0679020584, 0.0228554308, -0.0194691774, 0.0793229342, 0.105498, -0.00670192204, -0.0449709445, -0.00677908631, 1.37231187e-33, 0.00688372459, -0.00699694315, -0.0113777453, 0.0266867466, 0.0257566031, 0.0365490429, 0.076525487, 0.0335092619, 0.143797249, 0.0658624917, -0.0059910859, 0.0270074587, -0.0189191662, -0.0042861565, -0.111213699, 0.031981729, -0.00265909242, -0.0289859492, -0.0786494613, -0.024967758, -0.0279419404, -0.00229045772, -0.00305922795, 0.0434401855, -0.0207249373, 0.0246940311, 0.0702935457, -0.0473203212, -0.00918720197, -0.0316684023, -0.0599938631, -0.00616856338, -0.100611866, 0.042757526, -0.0132104149, 0.0325579979, 0.000225578784, 0.135051906, 0.00584809529, 0.0408179387, 0.0467122272, -0.0931138173, 0.00491656503, -0.0060139019, -0.0745913759, 0.0150740733, 0.0244069919, -0.0227128789, 0.00975522678, 0.00677916687, -0.0442849211, -0.113857985, -0.0956267267, 0.0300541259, -0.00145624869, 0.0266964678, 0.00280473381, 0.034433376, 0.0029180781, -0.0378577784, 0.0600410961, -0.00561270537, -0.0779327825, 0.00564633589, 0.0326087214, 0.0393610783, 0.0724027157, 0.0461417735, -0.0259307399, 0.0110543063, 0.0202005804, 0.0196108166, 0.0632796, -0.0479769409, -0.000609357434, -0.0574242771, 0.00296540465, 0.089156, -0.0794040188, -0.069452621, 0.118407041, 0.0867164, -0.0573256463, -0.0369692966, 0.0103307413, -0.0463115089, 0.0471023, 0.0286939256, -0.0118186753, 0.079275623, -0.0723684952, 0.0201503951, -0.0921380222, 0.130677253, -0.0188250728, -2.56561492e-08, 0.0229374487, 0.0249420013, 0.0380853377, 0.023743201, 0.0434640497, -0.0324808694, 0.0460737646, 0.0528243743, -0.0499613099, 0.0550839901, 0.0343583077, 0.0436411351, 0.0165209156, -0.0327407755, -0.00205059745, -0.0325547941, -0.0160198137, -0.0204653256, -0.00449181069, -0.0147178629, -0.00715784309, 0.0226130709, 0.0246090237, -0.00436252868, 0.0210351087, 0.0103996126, -0.0357616208, 0.0142986672, 0.0202039387, -0.0896920413, 0.0777754784, 0.0397306308, 0.0322608501, -0.0323179811, 0.0201579127, 0.0108015183, -0.060549885, -0.0376897231, -0.11377997, 0.0402965732, 0.0207185242, -0.0753158852, -0.02832371, -0.00185600983, 0.0520964451, 0.0248836763, 0.0253065117, 0.0616597, 0.0111907218, 0.0374773, -0.00244910712, -0.0383048803, 0.10470137, -0.0939819589, 0.00775363622, 0.0341648422, -0.0811881423, -0.0361996517, -0.014714512, 0.0549099259, -0.0183662195, 0.149860948, 0.0321263559, 0.00346218981], metadata={'Content': 'The shortened link for the water refilling stations website is https://ter.ps/heartthetap'}, sparse_values=None)}, usage={'read_units': 1})"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_db.index.fetch(['own_data_0'], namespace='own_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "bcfc1f57",
    "metadata": {},
    "outputs": [
@@ -670,12 +722,12 @@
        " 'index_fullness': 0.0,\n",
        " 'metric': 'cosine',\n",
        " 'namespaces': {'file_data': {'vector_count': 1590},\n",
-       "                'own_data': {'vector_count': 1}},\n",
-       " 'total_vector_count': 1591,\n",
+       "                'own_data': {'vector_count': 2}},\n",
+       " 'total_vector_count': 1592,\n",
        " 'vector_type': 'dense'}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "d9c84cd2",
    "metadata": {},
    "outputs": [
@@ -704,7 +756,7 @@
        "True"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,12 +775,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "id": "a2df1403",
    "metadata": {},
    "outputs": [],
    "source": [
     "google_model = \"gemini-2.5-flash\"\n",
+    "# google_model = \"gemini-2.0-flash-lite\"\n",
     "llm = ChatGoogleGenerativeAI(model=google_model)\n",
     "\n",
     "rag = umd_rag.UMDRAG(vector_db, llm)"
@@ -736,7 +789,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
+   "id": "b6516df9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"How to dispose of batteries at UMD?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "6cdf0da9",
    "metadata": {},
    "outputs": [
@@ -744,16 +807,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The provided information highlights UMD's progress and commitment to sustainability, including addressing \"society's Grand Challenges\" and the \"grand challenges of climate change and sustainability.\" However, it does not explicitly detail specific challenges that UMD faces in its sustainability efforts on campus.\n",
+      "The University of Maryland encourages the responsible recycling of batteries, even though common alkaline batteries can legally be disposed of in the trash.\n",
       "\n",
-      "The context focuses on:\n",
-      "*   Interactive summaries of UMD's progress (2020-2021).\n",
-      "*   Articles highlighting individuals and departments driving sustainability.\n",
-      "*   The role of the Sustainability Council in integrating sustainability into teaching, research, and service.\n",
-      "*   The Sustainability Advisors program, which aims to inspire students to get involved with \"ending poverty, fighting inequality, enhancing public health, stopping climate change, and more,\" describing this as a \"bold agenda\" and supporting \"Climate Action goals and President Pines' call to address society's Grand Challenges.\"\n",
-      "*   Academic and research opportunities, and administrative teams incorporating sustainability into university operations, committed to \"addressing the grand challenges of climate change and sustainability.\"\n",
+      "Here's how you can dispose of batteries at UMD:\n",
       "\n",
-      "While the text mentions \"bold agenda\" and \"Grand Challenges,\" these refer to the overarching societal issues UMD is working to address, rather than specific internal challenges UMD encounters in its sustainability initiatives.\n"
+      "*   **Use Campus Recycling Bins:** Batteries can be recycled in special bins located across campus. If you are in a lab setting, you can find a bin near your lab.\n",
+      "*   **UMD's Recycling Program:** Through a Sustainability Fund Mini-Grant, UMD has a program in place to safely recycle alkaline batteries, diverting thousands of pounds from landfills. The Office of Environmental Affairs (OEA) works with one of the largest battery recyclers in the US to collect and process used batteries.\n",
+      "*   **For Assistance:** If you have any questions about battery recycling or need help locating a bin, you can contact `recycle@umd.edu` for assistance.\n"
      ]
     }
    ],
