put chatbot as start

--- a/everything.ipynb
+++ b/everything.ipynb
@@ -537,8 +537,8 @@
        " 'index_fullness': 0.0,\n",
        " 'metric': 'cosine',\n",
        " 'namespaces': {'file_data': {'vector_count': 1590},\n",
-       "                'own_data': {'vector_count': 2}},\n",
-       " 'total_vector_count': 1592,\n",
+       "                'own_data': {'vector_count': 1}},\n",
+       " 'total_vector_count': 1591,\n",
        " 'vector_type': 'dense'}"
       ]
      },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "a2df1403",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "b6516df9",
    "metadata": {},
    "outputs": [],
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "6cdf0da9",
    "metadata": {},
    "outputs": [
@@ -807,13 +807,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The University of Maryland encourages the responsible recycling of batteries, even though common alkaline batteries can legally be disposed of in the trash.\n",
+      "The University of Maryland encourages the responsible recycling of batteries to reduce waste. While common alkaline batteries can legally be disposed of in the trash, UMD has implemented a program to recycle them instead.\n",
       "\n",
       "Here's how you can dispose of batteries at UMD:\n",
       "\n",
-      "*   **Use Campus Recycling Bins:** Batteries can be recycled in special bins located across campus. If you are in a lab setting, you can find a bin near your lab.\n",
-      "*   **UMD's Recycling Program:** Through a Sustainability Fund Mini-Grant, UMD has a program in place to safely recycle alkaline batteries, diverting thousands of pounds from landfills. The Office of Environmental Affairs (OEA) works with one of the largest battery recyclers in the US to collect and process used batteries.\n",
-      "*   **For Assistance:** If you have any questions about battery recycling or need help locating a bin, you can contact `recycle@umd.edu` for assistance.\n"
+      "*   **Recycle in Special Bins:** Batteries can be recycled in special bins located across campus. For those in labs, you can find a bin near your lab.\n",
+      "*   **UMD's Battery Recycling Program:** The Office of Environmental Affairs (OEA), supported by Sustainability Fund grants, works with one of the largest battery recyclers in the U.S. to collect and process UMD's used batteries. This program diverts thousands of pounds of alkaline batteries from landfills annually, allowing their raw materials to be reused.\n",
+      "\n",
+      "If you have any specific questions about battery recycling or other recycling inquiries, you can contact recycle@umd.edu for assistance.\n"
      ]
     }
    ],
